--- a/package.json
+++ b/package.json
@@ -19,5 +19,15 @@
     "run-sequence": "^1.1.1",
     "yargs": "^3.15.0"
   },
-  "private": true
+  "private": true,
+  "dependencies": {
+    "connect-modrewrite": "^0.8.2",
+    "front-matter": "^1.0.0",
+    "gulp-connect": "^2.2.0",
+    "gulp-front-matter": "^1.2.3",
+    "gulp-ruby-sass": "^1.4.0",
+    "gulp-util": "^3.0.6",
+    "path": "^0.11.14",
+    "through2": "^2.0.0"
+  }
 }
